[package]
name = "tc-finality-grandpa"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
description = "Integration of the GRANDPA finality gadget into tetcore."
documentation = "https://docs.rs/tc-finality-grandpa"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
derive_more = "0.99.2"
forktree = { version = "2.1.2", path = "../../utils/forktree" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"
parking_lot = "0.11.1"
rand = "0.7.2"
tetsy-scale-codec = { version = "2.0.1", features = ["derive"] }
tet-application-crypto = { version = "2.1.2", path = "../../primitives/application-crypto" }
arithmetic = { version = "2.1.2", path = "../../primitives/arithmetic" }
tp-runtime = { version = "2.1.2", path = "../../primitives/runtime" }
tetcore-utils = { version = "2.1.2", path = "../../primitives/utils" }
tp-consensus = { version = "2.1.2", path = "../../primitives/consensus/common" }
tc-consensus = { version = "2.1.2", path = "../consensus/common" }
tet-core = { version = "2.1.2", path = "../../primitives/core" }
tp-keystore = { version = "2.1.2", path = "../../primitives/keystore" }
tp-api = { version = "2.1.2", path = "../../primitives/api" }
tc-telemetry = { version = "2.1.2", path = "../telemetry" }
tc-keystore = { version = "2.1.2", path = "../keystore" }
serde_json = "1.0.41"
tc-client-api = { version = "2.1.2", path = "../api" }
tp-inherents = { version = "2.1.2", path = "../../primitives/inherents" }
tp-blockchain = { version = "2.1.2", path = "../../primitives/blockchain" }
tc-network = { version = "2.1.2", path = "../network" }
tc-network-gossip = { version = "2.1.2", path = "../network-gossip" }
tp-finality-grandpa = { version = "2.1.2", path = "../../primitives/finality-grandpa" }
prometheus-endpoint = { version = "2.1.2", package = "prometheus-endpoint", path = "../../utils/prometheus" }
tc-block-builder = { version = "2.1.2", path = "../block-builder" }
tetsy-finality-grandpa = { version = "0.13.0", features = ["derive-codec"] }
pin-project = "1.0.7"
linked-hash-map = "0.5.2"

[dev-dependencies]
assert_matches = "1.3.0"
tetsy-finality-grandpa = { version = "0.13.0", features = ["derive-codec", "test-helpers"] }
tc-network = { version = "2.1.2", path = "../network" }
tc-network-test = { path = "../network/test" }
tp-keyring = { version = "2.1.2", path = "../../primitives/keyring" }
tetcore-test-runtime-client = { path = "../../test-utils/runtime/client" }
tp-consensus-babe = { version = "2.1.2", path = "../../primitives/consensus/babe" }
tp-state-machine = { version = "2.1.2", path = "../../primitives/state-machine" }
tetcore-tracing = { version = "2.1.2", path = "../../primitives/tracing" }
tokio = { version = "0.2", features = ["rt-core"] }
tempfile = "3.1.0"
tp-api = { version = "2.1.2", path = "../../primitives/api" }
