[package]
name = "sc-informant"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetcore informant."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.9"
log = "0.4.8"
tetsy-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
sc-client-api = { version = "2.0.0", path = "../api" }
sc-network = { version = "0.8.0", path = "../network" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-utils = { version = "2.0.0", path = "../../primitives/utils" }
tc-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
wasm-timer = "0.2"
