[package]
name = "tc-informant"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetcore informant."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-informant"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.9"
log = "0.4.8"
tetsy-util-mem = { version = "0.9.1", default-features = false, features = ["tetsy-primitive-types"] }
tc-client-api = { version = "2.1.2", path = "../api" }
tc-network = { version = "2.1.2", path = "../network" }
tp-blockchain = { version = "2.1.2", path = "../../primitives/blockchain" }
tp-runtime = { version = "2.1.2", path = "../../primitives/runtime" }
tetcore-utils = { version = "2.1.2", path = "../../primitives/utils" }
tp-transaction-pool = { version = "2.1.2", path = "../../primitives/transaction-pool" }
wasm-timer = "0.2"
