[package]
name = "sc-jsonrpc-remote-signer"
version = "2.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Implementing a substrate client remote signer via JSON-RPC"

[dependencies]
jsonrpc-derive = "14.2.1"
jsonrpc-core = "14.2.0"
jsonrpc-core-client = "14.0"
sp-core = { version = "2.0.0-rc5", path="../../primitives/core" }
sp-application-crypto = { version = "2.0.0-rc5", path="../../primitives/application-crypto" }
sc-keystore = { version = "2.0.0-rc5", path="../keystore" }
futures = { version = "0.3.5", features = ["compat"] }
parking_lot = "0.11"
serde = { version = "1.0.115", features = ["derive"] }

[dev-dependencies]
jsonrpc-test = "14.2.0"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.57"