[package]
name = "sc-keystore"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Keystore (and session key management) for ed25519 based chains like Polkadot."
documentation = "https://docs.rs/sc-keystore"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
async-trait = "0.1.30"
derive_more = "0.99.2"
futures = "0.3.9"
futures-util = "0.3.4"
tc-application-crypto = { version = "2.0.0", path = "../../primitives/application-crypto" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
hex = "0.4.0"
merlin = { version = "2.0", default-features = false }
parking_lot = "0.11.1"
rand = "0.7.2"
serde_json = "1.0.41"
subtle = "2.1.1"

[dev-dependencies]
tempfile = "3.1.0"
