[package]
description = "components for a light client"
name = "sc-light"
version = "2.0.1"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
documentation = "https://docs.rs/sc-light"
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
lazy_static = "1.4.0"
hash-db = "0.15.2"
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-externalities = { version = "0.8.0", path = "../../primitives/externalities" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
sc-client-api = { version = "2.0.0", path = "../api" }
tc-api = { version = "2.0.0", path = "../../primitives/api" }
codec = { package = "tetsy-scale-codec", version = "2.0.0" }
sc-executor = { version = "0.8.0", path = "../executor" }

[features]
default = []
