[package]
description = "components for a light client"
name = "tc-light"
version = "2.0.1"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
documentation = "https://docs.rs/tc-light"
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
lazy_static = "1.4.0"
hash-db = "0.15.2"
tp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tp-externalities = { version = "0.8.0", path = "../../primitives/externalities" }
tp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tp-core = { version = "2.0.0", path = "../../primitives/core" }
tp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tc-client-api = { version = "2.0.0", path = "../api" }
tp-api = { version = "2.0.0", path = "../../primitives/api" }
codec = { package = "tetsy-scale-codec", version = "2.0.0" }
tc-executor = { version = "0.8.0", path = "../executor" }

[features]
default = []
