[package]
description = "Tetcore network protocol"
name = "tc-network"
version = "2.1.2"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-network"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.7"

[dependencies]
async-trait = "0.1"
async-std = "1.6.5"
bitflags = "1.2.0"
bs58 = "0.4.0"
bytes = "1"
codec = { package = "tetsy-scale-codec", version = "2.0.1", features = ["derive"] }
derive_more = "0.99.2"
either = "1.5.3"
erased-serde = "0.3.9"
fnv = "1.0.6"
forktree = { version = "2.1.2", path = "../../utils/forktree" }
futures = "0.3.9"
futures-timer = "3.0.2"
asynchronous-codec = "0.5"
hex = "0.4.0"
ip_network = "0.3.4"
linked-hash-map = "0.5.2"
linked_hash_set = "0.1.3"
lru = "0.6.3"
log = "0.4.8"
nohash-hasher = "0.2.0"
parking_lot = "0.11.1"
pin-project = "1.0.7"
prometheus-endpoint = { version = "2.1.2", package = "prometheus-endpoint", path = "../../utils/prometheus" }
prost = "0.7"
rand = "0.7.2"
tc-block-builder = { version = "2.1.2", path = "../block-builder" }
tc-client-api = { version = "2.1.2", path = "../api" }
tc-peerset = { version = "2.1.2", path = "../peerset" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
smallvec = "1.5.0"
arithmetic = { version = "2.1.2", path = "../../primitives/arithmetic" }
tp-blockchain = { version = "2.1.2", path = "../../primitives/blockchain" }
tp-consensus = { version = "2.1.2", path = "../../primitives/consensus/common" }
tet-core = { version = "2.1.2", path = "../../primitives/core" }
tp-runtime = { version = "2.1.2", path = "../../primitives/runtime" }
tetcore-utils = { version = "2.1.2", path = "../../primitives/utils" }
thiserror = "1"
unsigned-varint = { version = "0.6.0", features = ["futures", "asynchronous_codec"] }
void = "1.0.2"
wasm-timer = "0.2"
zeroize = "1.2.0"

[dependencies.tetsy-libp2p]
version = "0.34.2"
default-features = false
features = ["dns", "identify", "kad", "mdns", "mplex", "noise", "ping", "request-response", "tcp-async-io", "websocket", "remux", "wasm-ext"]

[dev-dependencies]
assert_matches = "1.3"
tetsy-libp2p = { version = "0.34.2", default-features = false }
quickcheck = "0.9.0"
rand = "0.7.2"
tp-keyring = { version = "2.1.2", path = "../../primitives/keyring" }
tp-test-primitives = { path = "../../primitives/test-primitives" }
tetcore-tracing = { version = "2.1.2", path = "../../primitives/tracing" }
tetcore-test-runtime = { path = "../../test-utils/runtime" }
tetcore-test-runtime-client = { path = "../../test-utils/runtime/client" }
tempfile = "3.1.0"

[features]
default = []
