[package]
description = "Connectivity manager based on reputation"
homepage = "https://github.com/tetcoin/tetcore/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "tc-peerset"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
repository = "https://github.com/tetcoin/tetcore/"
documentation = "https://docs.rs/tc-peerset"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
futures = "0.3.9"
# libp2p = { version = "0.34.0", default-features = false }
tetsy-libp2p = { version = "0.36.0", default-features = false }
tetcore-utils = { version = "2.0.0", path = "../../primitives/utils"}
log = "0.4.8"
serde_json = "1.0.41"
wasm-timer = "0.2"

[dev-dependencies]
rand = "0.7.2"
