[package]
name = "tc-proposer-metrics"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-proposer-metrics"
description = "Basic metrics for block production."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
prometheus-endpoint = { package = "prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.1"}
