[package]
name = "tc-rpc-api"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.1" }
derive_more = "0.99.2"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-pubsub = "15.1.0"
log = "0.4.8"
parking_lot = "0.11.1"
tet-core = { version = "2.0.0", path = "../../primitives/core" }
tp-version = { version = "2.0.0", path = "../../primitives/version" }
tp-runtime = { path = "../../primitives/runtime" , version = "2.0.0"}
chain-spec = { path = "../../primitives/chain-spec" , version = "2.0.0"}
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tp-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
tp-rpc = { version = "2.0.0", path = "../../primitives/rpc" }
