[package]
name = "sc-rpc-server"
version = "2.0.0-rc5"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC servers."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = { version = "15.0.0", git = "https://github.com/paritytech/jsonrpc.git" }
pubsub = { package = "jsonrpc-pubsub", version = "15.0.0", git = "https://github.com/paritytech/jsonrpc.git" }
log = "0.4.8"
serde = "1.0.101"
serde_json = "1.0.41"
sp-runtime = { version = "2.0.0-rc5", path = "../../primitives/runtime" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
http = { package = "jsonrpc-http-server", version = "15.0.0", git = "https://github.com/paritytech/jsonrpc.git" }
ws = { package = "jsonrpc-ws-server", version = "15.0.0", git = "https://github.com/paritytech/jsonrpc.git"  }
ipc = { version = "15.0.0", package = "jsonrpc-ipc-server", git = "https://github.com/paritytech/jsonrpc.git"  }
