[package]
name = "tc-rpc-server"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-rpc-server"
description = "Tetcore RPC servers."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.1.6"
tetsy-jsonrpc-core = "15.1.0"
pubsub = { package = "tetsy-jsonrpc-pubsub", version = "15.1.0" }
log = "0.4.8"
prometheus-endpoint = { package = "prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.1"}
serde = "1.0.101"
serde_json = "1.0.41"
tp-runtime = { version = "2.0.2", path = "../../primitives/runtime" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
http = { package = "tetsy-jsonrpc-http-server", version = "15.1.0" }
ipc = { package = "tetsy-jsonrpc-ipc-server", version = "15.1.0" }
ws = { package = "tetsy-jsonrpc-ws-server", version = "15.1.0" }
