[package]
name = "tc-rpc"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore Client RPC"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
tc-rpc-api = { version = "0.8.0", path = "../rpc-api" }
tc-client-api = { version = "2.0.0", path = "../api" }
tp-api = { version = "2.0.0", path = "../../primitives/api" }
codec = { package = "tetsy-scale-codec", version = "2.0.1" }
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-pubsub = "15.1.0"
log = "0.4.8"
tp-core = { version = "2.0.0", path = "../../primitives/core" }
rpc = { package = "jsonrpc-core", version = "15.1.0" }
tp-version = { version = "2.0.0", path = "../../primitives/version" }
serde_json = "1.0.41"
tp-session = { version = "2.0.0", path = "../../primitives/session" }
tp-offchain = { version = "2.0.0", path = "../../primitives/offchain" }
tp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tetcore-utils = { version = "2.0.0", path = "../../primitives/utils" }
tp-rpc = { version = "2.0.0", path = "../../primitives/rpc" }
tp-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
tp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
chain-spec = { version = "2.0.0", path = "../../primitives/chain-spec" }
tc-executor = { version = "0.8.0", path = "../executor" }
tc-block-builder = { version = "0.8.0", path = "../block-builder" }
tc-keystore = { version = "2.0.0", path = "../keystore" }
tp-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
tp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-tracing = { version = "2.0.0", path = "../tracing" }
tetsy-hash-db = { version = "0.15.2", default-features = false }
parking_lot = "0.11.1"
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
futures01 = { package = "futures", version = "0.1.29" }
lazy_static = "1.4.0"
tc-network = { version = "0.8.0", path = "../network" }
tp-io = { version = "2.0.0", path = "../../primitives/io" }
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
tokio = "0.1.22"
tc-transaction-pool = { version = "2.0.0", path = "../transaction-pool" }
tc-cli = { version = "0.8.0", path = "../cli" }

[features]
test-helpers = ["lazy_static"]
