[package]
name = "sc-service"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore service. Starts a thread that spins up the network, client, and extrinsic pool. Manages communication between them."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["db"]
# The RocksDB feature activates the RocksDB database backend. If it is not activated, and you pass
# a path to a database, an error will be produced at runtime.
db = ["sc-client-db/with-kvdb-rocksdb", "sc-client-db/with-tetsy-db"]
wasmtime = [
	"sc-executor/wasmtime",
]
# exposes the client type
test-helpers = []

[dependencies]
thiserror = "1.0.21"
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.4", features = ["compat"] }
jsonrpc-pubsub = "15.1"
jsonrpc-core = "15.1"
rand = "0.7.3"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.11"
futures-timer = "3.0.1"
wasm-timer = "0.2"
tetsy-exit-future = "0.2.0"
pin-project = "0.4.8"
hash-db = "0.15.2"
serde = "1.0.101"
serde_json = "1.0.41"
sc-keystore = { version = "2.0.0", path = "../keystore" }
tc-io = { version = "2.0.0", path = "../../primitives/io" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-trie = { version = "2.0.0", path = "../../primitives/trie" }
tc-externalities = { version = "0.8.0", path = "../../primitives/externalities" }
tc-utils = { version = "2.0.0", path = "../../primitives/utils" }
tc-version = { version = "2.0.0", path = "../../primitives/version" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
tc-session = { version = "2.0.0", path = "../../primitives/session" }
tc-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tc-application-crypto = { version = "2.0.0", path = "../../primitives/application-crypto" }
tc-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
tc-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
sc-network = { version = "0.8.0", path = "../network" }
sc-chain-spec = { version = "2.0.0", path = "../chain-spec" }
sc-light = { version = "2.0.0", path = "../light" }
sc-client-api = { version = "2.0.0", path = "../api" }
tc-api = { version = "2.0.0", path = "../../primitives/api" }
sc-client-db = { version = "0.8.0", default-features = false, path = "../db" }
codec = { package = "tetsy-scale-codec", version = "2.0.0" }
sc-executor = { version = "0.8.0", path = "../executor" }
sc-transaction-pool = { version = "2.0.0", path = "../transaction-pool" }
tc-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
sc-rpc-server = { version = "2.0.0", path = "../rpc-servers" }
sc-rpc = { version = "2.0.0", path = "../rpc" }
sc-block-builder = { version = "0.8.0", path = "../block-builder" }
tc-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" }
sc-informant = { version = "0.8.0", path = "../informant" }
sc-telemetry = { version = "2.0.0", path = "../telemetry" }
sc-offchain = { version = "2.0.0", path = "../offchain" }
prometheus-endpoint = { package = "tetcore-prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.0"}
sc-tracing = { version = "2.0.0", path = "../tracing" }
tc-tracing = { version = "2.0.0", path = "../../primitives/tracing" }
tracing = "0.1.22"
tracing-futures = { version = "0.2.4" }
tetsy-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
tempfile = "3.1.0"
directories = "3.0.1"

[dev-dependencies]
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
tetcore-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime/" }
tc-consensus-babe = { version = "0.8.0", path = "../../primitives/consensus/babe" }
grandpa = { version = "0.8.0", package = "sc-finality-grandpa", path = "../finality-grandpa" }
grandpa-primitives = { version = "2.0.0", package = "tc-finality-grandpa", path = "../../primitives/finality-grandpa" }
tokio = { version = "0.2", default-features = false }
async-std = { version = "1.6.5", default-features = false }
